[package]
name = "inventory_contract"
version = "0.1.0"
edition = "2021"

[dependencies]
# Usamos la versión que tu error indica está "locked"
soroban-sdk = "22.0.7"
# --- ASEGÚRATE DE QUE NO HAYA OTRA LÍNEA PIDIENDO 'soroban-sdk' CON FEATURES ---

# --- PUEDE HABER OTRAS DEPENDENCIAS AQUÍ ---

[lib]
crate-type = ["cdylib"]

# --- ASEGÚRATE DE QUE LA SECCIÓN [features] ESTÉ ASÍ ---
[features]
default = [] # <- ¡Importante! Debe estar vacío.
# La línea std = ["soroban-sdk/std"] DEBE SER ELIMINADA.
testutils = ["soroban-sdk/testutils"] # <- Esta está bien, déjala si la necesitas para tests.